# candidate-ranking

./: .gitignore  README.md  chunking.py  download.py  embedding.py  graph_builder.py  jd_parsing.py  pyproject.toml  rank.py  requirements.txt  retrival.py  skill_vocab.pkl  submission_metadata.yaml
artifacts/: jd_embedding.pkl  jd_parsed.pkl  skill_vocab.pkl
precompute/: chunking.py  embedding.py  jd_parsing.py
