[project]
name = "candidate-ranking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "llama-index>=0.14.22",
    "llama-index-embeddings-huggingface>=0.7.0",
    "llama-index-vector-stores-qdrant>=0.10.1",
    "pip>=26.1.2",
]
