[project]
name = "candidate-ranking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=2.10.0",
    "huggingface-hub>=1.21.0",
    "llama-index>=0.14.22",
    "llama-index-embeddings-google-genai>=0.5.1",
    "llama-index-vector-stores-qdrant>=0.10.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "rapidfuzz>=3.14.5",
]
